--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
             <div class="milestone-card-body">
                 <span class="floating-text" data-position="0.1">  </span>
 
-                <span class="floating-text" data-position="0.3">That's 8.3 years of your life...</span>
-                <span class="floating-text" data-position="0.55">  </span>
+                <span class="floating-text" data-position="0.2">That's 8.3 years of your life...</span>
+                <span class="floating-text" data-position="0.35"> ...spent scrolling </span>
+                <span class="floating-text" data-position="0.55"> A decade of moments, lost to the algorithm </span>
+
 
                 <div class="mini-card lives-card" data-position="0.85" id="livesMiniCard1">
                     <h3><span id="livesYears1">0</span></h3>
@@ -172,7 +174,7 @@
 
                 <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 1.74 million hours on social media. This card represents that time, to scale.</span>
 
-                <span class="floating-text" data-position="0.04">We rarely see time waste represented to scale. This is part of the reason we consistently fail to grasp just how much of our collective life is disappearing into feeds.</span>
+                <span class="floating-text" data-position="0.04">We rarely see time waste represented to scale. Too much dissapears into feeds.</span>
 
                 <div class="mini-card" data-position="0.071" data-hours="175200">
                     <h3>175,200 Hours</h3>
