--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
                 <div class="mini-card" data-position="0.285" data-hours="700800">
                     <h3>700,800 Hours</h3>
-                    <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Birth, life, death. That's how much time you've scrolled past.</p>
+                    <p>One human lifetime — 80 years. Every waking moment, every sleeping one. Birth, life, death. That's how much time you've scrolled past.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — together, they nearly fill this entire card.</span>
@@ -206,7 +206,7 @@
 
                 <span class="floating-text" data-position="0.57">The time represented by this card is consumed every 10 seconds. By the time you finish scrolling, it will have happened many times over.</span>
 
-                <span class="floating-text" data-position="0.65">1.74 million hours. That's 2.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
+                <span class="floating-text" data-position="0.65">1.74 million hours. That's 2.5 human lifetimes. Consumed. Every. 10. Seconds.</span>
 
                 <span class="floating-text" data-position="0.73">Instead of living, we scroll.</span>
 
