--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <p>One human lifetime — 80 years. Every waking moment, every sleeping one. Birth, life, death. That's how much time you've scrolled past.</p>
                 </div>
 
-                <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — together, they nearly fill this entire card.</span>
+                <span class="floating-text" data-position="0.37">And every mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — together, they fill just a portion of this entire card.</span>
 
                 <span class="floating-text" data-position="0.47">OK, we're coming up on the end now.</span>
 
