credits: group editors under label, style Inspired by similarly
Merge Yossi and Max into a single "Editors" entry (comma-separated), and
apply the same de-emphasized label style to "Inspired by".

--- a/index.html
+++ b/index.html
@@ -291,15 +291,11 @@
                     <h3>Isaac Mansell</h3>
                     <p>👑-ing</p>
                 </div>
-                <div class="attribution-section">
-                    <h3>Yossi Blumenfeld</h3>
-                    <p></p>
+                <div class="attribution-section attribution-editors">
+                    <h3>Editors</h3>
+                    <p>Yossi Blumenfeld, S. Max Fan</p>
                 </div>
-                <div class="attribution-section">
-                    <h3>S. Max Fan</h3>
-                    <p>Renaissance person</p>
-                </div>
-                <div class="attribution-section">
+                <div class="attribution-section attribution-editors">
                     <h3>Inspired by</h3>
                     <p><a href="https://eattherichtextformat.github.io/1-pixel-wealth/" target="_blank" rel="noopener noreferrer">Wealth, shown to scale</a></p>
                     <p><a href="https://www.usdebtclock.org/" target="_blank" rel="noopener noreferrer">US Debt Clock</a></p>
